--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,12 @@
   font-weight: bold;
 }
 
+html {
+  background-color: "#454545";
+}
+
 body {
+  background-color: "#454545";
   margin: 0;
   font-family: DaddyFont, -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
